--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  padding: 20px 40px;
+  margin: 20px;
+  border: none;
+  border-radius: 30px;
+  color: #2b8a2f;
+  background-color: #9dffa1;
+  -webkit-transition: .5s all ease-in;
+  transition: .2s all ease-in;
+  -webkit-box-shadow: 0px 0px 10px 0px #b5ffb8;
+  box-shadow: 0px 0px 30px 5px #b5ffb8;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover {
+  background-color: #b7fcb9;
+  -webkit-animation: breathing 3s infinite;
+  animation: breathing 3s infinite;
+  -webkit-box-shadow: 0px 0px 10px 0px #b5ffb8;
+  box-shadow: 0px 0px 45px 17px #b5ffb8;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-containter {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
